--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -3,7 +3,7 @@
     top: 0;
     z-index: 70;
     transition: all .3s ease-in-out;
-    background: #111010;
+    background: #fff;
     box-shadow: 0 0 40px 5px rgb(0 0 0 / 8%);
     animation: navAnimate 0.5s ease-in-out;
 }
